less/oya-views.less
/*************/
/*** VIEWS ***/
/*************/

/* Common Components */
.see-more {
	border-right: 1px solid @oya-gray2-color;
	border-left: 1px solid @oya-gray2-color;
	border-top: 1px solid @oya-gray2-color;
	border-bottom: 5px solid @oya-gray2-color;
	font-size: 24px;
	text-transform: uppercase;
	color: @oya-gray6-color;
	padding: 15px;		
	display: block;
	cursor: pointer;
	text-decoration: none;
	text-align: center;
	&:hover {
		background: @oya-gray2-color;
		color: #FFF;
	}
}

/* OYA - Header Image */
section#block-views-oya-header-image-block {
	margin-bottom: 35px;
	& .view-content {
		& .views-row {
			position: relative;
		}
		& .views-field-field-term-image .field-content,
                  .views-field-field-term-image-1 .field-content {
			background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
			& img {
				position: relative;
				z-index: -1;
			}
		}
		& .views-field-name {
			position: absolute;
			bottom: 0;
			font-size: 14px;
			text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
			padding: 0 0 10px 20px;
			color: #FFF;
			line-height: 14px;
		}
	}
}

/* OYA - Menu Back Reset Link */

.view-oya-menu-back-reset-link {
	padding: 20px;
	& a {
		color: @oya-gray7-color;
		text-transform: uppercase;
		font-style: italic;
	}
}



/* OYA - Sub Navigation */
.oya-sidebar-nav {
	background: transparent;
	& button {
		background: transparent;
		border: 0;
        }
        & .navbar-collapse {
		z-index: 0;
	}
        & .navbar-nav {
		& li {
			background: @oya-gray-color;
			border-top: 1px solid @oya-gray2-color;
			& > a {
				text-transform: initial;
				border-right: none;
				color: @oya-blue-color;
				&:hover {
					background: @oya-gray5-color;
					color: @oya-blue2-color !important;
				}
				&.active {
					background: @oya-gray7-color;
					color: #FFF;
					margin-bottom: 3px;
				}
			}
			&:hover, &:focus {
				background: @oya-gray5-color;
				& a {
					color: @oya-blue2-color !important;
				}
			}
		}
		
	}
        & .navbar-toggle {
		& .icon-bar {
			background-color: @oya-blue-color;
		
		}
	}
}





/* OYA - Featured Story */

section#block-views-oya-carousel-block {
	color: #FFF;
	& h3 {
		font-size: 46px;
		line-height: 55px;
		& a {
			text-decoration: none;
			color: #FFF;
			font-family: @oya-font-adelle-regular;
		}
	}
	& .carousel-control span {
		background: @oya-red-color;
		height: 34px;
	}
	& a {
		color: #FFF;
	}
	& div.carousel-img-container {
		background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
		width: 100%;
		height: 100%;
		display: table-footer-group;
		position: relative;
		z-index: 2000;
		& img {
			position: relative;
			z-index: -11111;
		}
	}
	& div.carousel-caption {
		& p {
			font-size: 22px;
			line-height: 26px;
			width: 80%;
			margin: 0 auto;
		}
	}
}


/* OYA - Areas of Focus */
section .view-oya-areas-of-focus {
	/* 
   	margin: 56px 56px; 
	overflow: hidden;
	*/
}
section#block-views-oya-areas-of-focus-block {
        & .view-oya-areas-of-focus {
		margin-bottom: 20px;
	}
	& .row-items:nth-child(2) {
		display: none;
	}
        & h2 {
		background: @oya-green2-color;
		color: #FFF;
		padding: 15px 20px;
		text-align: center;
		margin: 0;
		font-size: 24px;
		margin-bottom: 40px;
		position: relative;
		cursor: pointer;
		border-bottom: 3px solid @oya-green-color;
		&:after {
			top: 100%;
                	left: 50%;
                	border: solid transparent;
                	content: " ";
                	height: 0;
                	width: 0;
                	position: absolute;
                	pointer-events: none;
                	border-width: 15px;
                	/* margin-left: -30px; */
                	border-top-color: @oya-green2-color;
		}
		&:hover {
			background: @oya-green-color;
		        &:after {
				border-top-color: @oya-green-color;
			}	
		}
		& a {
			color: #FFF;
		}
	}
	
}

.areaBox {
        width: 388px;
        height: 380px;
        float: left;
        border-bottom: 5px solid blue;
	margin-right: 2px;
	position: relative;
}
section .view-oya-areas-of-focus .views-row-last .areaBox {
	margin: 0px;
}
.areaBox .field-content a {
	color: @oya-title-color;
	font-size: @oya-title-font;
	text-decoration: none;
}

.areaInfoBox {
	width: 388px;
	height: 380px;
	position: absolute;
	top: 240px;
	opacity: .50;
	/* background: #375788; */
        background: rgba(55,87,136,0.5);
	text-align: center;
	transition: all 0.7s ease-out;
}
.areaInfoBox span.field-content {
	width: 100%;
	text-align: center;
	height: 30%;
	z-index: 100;
}
.areaInfoBox .title-bg {
	background: #000;
	opacity: .50;
	height: 100%;
	width: 100%;
}
.areaInfoBox:hover {
	top: 0px;
}
.areaInfoBox .learnMore {
	background: #375788;
	position: absolute;
	display: block;
	width: 100%;
	bottom: 0;
	font-family: @oya-font-montserrat;
	font-weight: bold;
	font-size: 24px;
}

/* OYA - Upcoming Events */
.view-oya-upcoming-events {
        & .views-field-title {
		font-size: 30px;
		line-height: 34px;
		width: 80%;
		float: left;
	}
	& .views-field-event-calendar-date {
		float: left;
		width: 10%;
		height: 150px;
		margin: 0% 5%;
		& .oya-event-calendar-date {
			text-align: center;
			& .oya-event-month {
				font-size: 14px;
				background: @oya-gray7-color;
				color: #FFF;
				float: left;
				width: 100%;
			        text-transform: uppercase;	
			}	
			& .oya-event-day {
				float: left;
				width: 100%;
				color: @oya-black2-color;
				background: #FFF;
			}
		}
	}
}


/* OYA - Audience Menu */
section .view-oya-audience-menu {
	background: @oya-am-bg;
	/* padding: 30px 56px;*/
        padding: 30px 0px;
	/* overflow: hidden */;
        & > .row.no-gutter {
		position: relative;
	}
}
.audienceContainer {
	/* position: relative; */
	position: initial;
}
.audienceBox {
	/* width: 193px;
	float: left;
	margin-right: 2px;*/
}
section .view-oya-audience-menu .views-row-last .audienceBox {
	margin-right: 0px;
}
.audienceBox { 
	& .title-bg {
		background: @oya-green2-color;
        	text-align: center;
		height: 71px;
		/* padding: 0px 30px; */
		line-height: 71px; 
		position: relative;
        	:hover {
			&:after {
        			top: 100%;
                		left: 47%;
                		border: solid transparent;
                		content: " ";
                		height: 0;
                		width: 0;
                		position: absolute;
                		pointer-events: none;
                		border-width: 10px;
                		/* margin-left: -30px; */
                		border-top-color: @oya-green2-color;
				z-index: 2000;
      			}
		}
        }
	& .audience-image {
		&:after {
			position: absolute;
			opacity: 0;
			transition: all 0.5s;
			-webkit-transition: all 0.5s;
			content: '\A';
			background: rgba(0,0,0,0.6);
		}
		&:hover {
			&:after {
				opacity: 1;
			}
		}
	}		
}
.audienceBox .title-bg span {
	display: inline-block;
	vertical-align: middle;
	line-height: normal;
}
.audienceBox .field-content a {
	color: @oya-title-color;
     	font-size: 20px;
	line-height: 22px;
	text-transform: uppercase;
	font-family: @oya-font-montserrat;
	text-decoration: none;
}
#Prospective-Students {
	/* display: inline; */
}
.audienceInfoBox {
	position: absolute;
	top: 71px;
	width: 100%;
	height: 299px;
	/* background: #C8E5E9; */
	z-index: 100;
	margin: 0 56px;
	left: 0;
        & .tmpContainer {
		background: @oya-lightblue-color;
	}
}
.audienceInfoBox .iconContainer {
	/* width: 336px; */
	height: inherit;
	background: #FFF;
	float: left;
	padding: 40px 60px !important;
	& .field-content:nth-child(2) {
		text-align: center;
		font-family: @oya-font-montserrat;
		font-size: 16px;
		line-height: 20px;
		margin-top: 10px;
		color: @oya-gray7-color;
		& h1, h2, h3, h4 {
			color: @oya-black2-color;
			font-family: @oya-font-montserrat;
			
		}
	}
}
.iconContainer .field-content * {
	margin: 0 auto;
}
.audienceInfoBox .audienceInfoContent {
	/* width: 832px; */
	float: left;
	padding: 40px 60px !important;
	font-size: 20px;
	color: #444;
	line-height: 26px;
	font-family: @oya-font-montserrat;
	background: @oya-lightblue-color;
	height: inherit;
	& h1 {
		margin: 0px 0px 15px 0px;
		font-size: 44px;
		color: #403F3E;
		font-family: @oya-font-adelle-regular;
	}
	& .link-group {
		margin-top: 20px;
		& .link-item {
			width: 31.3%;
			margin-right: 3%;
			height: 80px;
			float: left;
			&:last-child {
				margin-right: 0;
			}

			& .btn-secondary {
				width: 30%;
				margin-right: 3%;
				white-space: pre-wrap;
				font-size: 20px;
				line-height: 22px;
				text-align: left;
				height: 80px;
  				display: table-cell;
			}
		}
	}
	
}


/* OYA - Featured Story Sidebar */
.view-oya-featured-story .row {
	margin: 0px;
}
.view-oya-featured-story #featured-story-container {
	background: @oya-blue-color;
	overflow: hidden;
}
.view-oya-featured-story #featured-story-container .col-sm-5 {
	padding: 0px;
}
.view-oya-featured-story #featured-story-container .col-sm-7 {
	padding: 0px;
}
.view-oya-featured-story .views-row {
	position: relative;
}
.view-oya-featured-story .views-field-nothing {
	background: rgba(0,0,0,0.5);
	color: #E6E6E6;
	padding: 10px 20px;
	position: absolute;
	width: 100%;
	text-transform: uppercase;
	bottom: 0;
}
.view-oya-featured-story .featured-story-title {
	color: #FFF;
	padding: 20px;
}
.view-oya-featured-story .featured-story-title a {
	color: #FFF;
	font-size: 23px;
	line-height: 27px;
}

